--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <h1>Wage Per Second</h1>
+        <div class="top">
+          <h1>Wage Per Second</h1>
 
-        <h3>Enter your hourly wage and watch your money grow in real-time!</h3>
+          <h3>Enter your hourly wage and watch your money grow in real-time!</h3>
+        </div>
 
         <div class="wage-display-group">
           <div class="wage-display">$<span id="dollar-display">10</span>.<span id="cents-display">00</span></div>
@@ -27,21 +29,25 @@
         </div>
 
         <div class="wage-input">
-          <label for="dollar">Dollars:</label>
-          <input type="range" class="range-slider" id="dollar" value="10" min="1" max="100" step="1">
+          <div id="dollar-section">
+            <label for="dollar">Dollars:</label>
+            <input type="range" class="range-slider" id="dollar" value="10" min="1" max="100" step="1">
+          </div>
 
-          <label for="cents">Cents:</label>
-          <input type="range" class="range-slider" id="cents" value="0" min="0" max="99" step="1">
+          <div id="cents-section">
+            <label for="cents">Cents:</label>
+            <input type="range" class="range-slider" id="cents" value="0" min="0" max="99" step="1">
+          </div>
         </div>
 
-        <button id="gobtn">Go!</button>
+        <!-- <button id="gobtn">Go!</button> -->
 
         <div id="wage-output">You earn $<span id="seconds-wage"></span> per second!
           <div id="coindiv" class="container"></div>
+        </div>
 
-          <div id="pigdiv">
-            <img id="pbank" src="img/piggybank.svg" alt="piggy-bank">
-          </div>
+        <div id="pigdiv">
+          <img id="pbank" src="img/piggybank.svg" alt="piggy-bank">
         </div>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
