math makes sense now

--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
           </div>
         </div>
 
-        <!-- <button id="gobtn">Go!</button> -->
+        <div id="amountPerSec">You earn $<span id="seconds-wage"></span> per second!<div>
+          <div id="counter"><span id="elapsedTime"></span></div>
+          <div id="cumulativeTotal">So far, you've earned: $<span id="cumulativeWage"></span></div>
+          <button id="startbtn">Start Counter</button>
+          <button id="stopbtn">Stop Counter</button>
 
-        <div id="wage-output">You earn $<span id="seconds-wage"></span> per second!
+        <div id="wage-out">
           <div id="coindiv" class="container"></div>
         </div>
 
