--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Wage Bank</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,41 +16,123 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
         <div class="top">
           <h1>Wage Per Second</h1>
 
           <h3>Enter your hourly wage and watch your money grow in real-time!</h3>
         </div>
 
-        <div class="wage-display-group">
-          <div class="wage-display">$<span id="dollar-display">10</span>.<span id="cents-display">00</span></div>
-          <div id="perhour">per hour</div>
-        </div>
-
-        <div class="wage-input">
-          <div id="dollar-section">
-            <label for="dollar">Dollars:</label>
-            <input type="range" class="range-slider" id="dollar" value="10" min="1" max="100" step="1">
+        <div class="main">
+          <div class="wage-display-group">
+            <div id="middle">
+              <div class="wage-display">$<span id="dollar-display">15</span>.<span id="cents-display">00</span></div>
+              <div class="subt">per hour</div>
+            </div>
+          </div>
+          <div class="wage-display-group2">
+              <div id="cumulativeTotal">$<span id="cumulativeWage">00.00</span></div>
+              <div class="subt">so far</div>
           </div>
 
-          <div id="cents-section">
-            <label for="cents">Cents:</label>
-            <input type="range" class="range-slider" id="cents" value="0" min="0" max="99" step="1">
+          <div class="wage-input">
+            <div id="dollar-section">
+              <label for="dollar">Dollars:</label>
+              <input type="range" class="range-slider" id="dollar" value="10" min="1" max="100" step="1">
+            </div>
+
+            <div id="cents-section">
+              <label for="cents">Cents:</label>
+              <input type="range" class="range-slider" id="cents" value="0" min="0" max="99" step="1">
+            </div>
+            <div id="amountPerSec">You earn $<span id="seconds-wage"></span> per second!</div>
           </div>
-          <div id="amountPerSec">You earn $<span id="seconds-wage"></span> per second!<div>
-        </div>
 
           <div id="counter"><span id="elapsedTime"></span></div>
-          <button id="startbtn">Start Counter</button>
-          <button id="stopbtn">Stop Counter</button>
+          <div id="startStopBtn" class="startCounter">Start Counter</div>
 
-        <div id="wage-out">
-          <div id="coindiv" class="container"></div>
-        </div>
+          <div id="pigdiv">
+            <div id="pigsvg">
 
-        <div id="pigdiv">
-          <div id="cumulativeTotal">$<span id="cumulativeWage"></span></div>
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 352.2 334" xml:space="preserve" enable-background="new 0 0 352.2 334">
+                <style type="text/css">
+
+              	.st0{fill:none;stroke:#000000;stroke-width:3;stroke-linecap:round;stroke-miterlimit:10;}
+              	.st1{fill:#FBCCCC;stroke:#000000;stroke-width:2;stroke-miterlimit:10;}
+              	.st2{fill:url(#white_belly_1_);}
+              	.st3{fill:none;stroke:#000000;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+              	.st4{fill:url(#SVGID_1_);}
+              	.st5{fill:#FFCD05;}
+              	.st6{fill:none;stroke:#000000;stroke-width:2;stroke-miterlimit:10;}
+              	.st7{fill:#F3A8A8;stroke:#000000;stroke-width:2;stroke-miterlimit:10;}
+              	.st8{fill:none;stroke:#000000;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;}
+              	.st9{fill:#FBCCCC;stroke:#000000;stroke-width:2;stroke-linecap:round;stroke-miterlimit:10;}
+              	.st10{fill:none;stroke:#000000;stroke-miterlimit:10;}
+              	.st11{fill:url(#bellytransparent_1_);}
+              	.st12{fill:none;stroke:#000000;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+
+                </style>
+                <g id="shape">
+                  <path id="tail" class="st0" d="M312 164.4c0 0 25.9-5.4 26.1-22.8 0.1-11.3-18.9-6.2-19.3 1.8 -0.4 8 16.9 24 28.6 10.3 6.4-7.5 1.5-17.4 1.5-17.4"/>
+                  <path id="body_shape" class="st1" d="M60.8 267c0 0-0.6 54.4 2.8 55.2 29.7 6.6 34.8-31.4 34.8-31.4s2.9 0.7 8.3 2.7l-7.1 36.8c0 0 17 6 29.5 0 6.7-3.2 15.2-15.8 21.6-26.7 7.1 0.8 14.3 1.2 21.6 1.2 16.1 0 31.7-1.9 46.2-5.4l0 0 -6.4 16.9c0 0 21 5.5 27 0 5.6-5.1 13.8-26.7 14.9-29.7 1.2-0.6 2.3-1.1 3.4-1.7l-3.3 33.9c0 0 15 6.5 22 2.5s25-44 29.5-62 9.8-37.9 9.8-37.9l0 0c2.4-7.7 3.7-15.8 3.7-24.1 0-59.4-65.7-107.5-146.8-107.5 -8.3 0-16.5 0.5-24.4 1.5 -0.9-6.9-3.4-15.5-9.8-22.5 -18.4-20-42.4-15-42.4-15s-4.1 16.9-4.3 29.3c-2.1-2.9-4.6-5.6-7.6-8.1C64.1 58.8 39 70.2 39 70.2s-0.1 18.5 2.8 30.6c3 12.9 10.4 22.1 13.4 25.5 -16.4 7.1-35.6 14.5-35.6 14.5 -10.2 0-18.4 22.3-18.4 49.9 0 27.5 8.2 49.9 18.4 49.9 0.3 0 0.6 0 0.9-0.1 1.4 0.1 5 0.8 12.7 4.3 6.2 2.9 13.3 9.1 19.9 15.1L60.8 267z"/>
+                  <radialGradient id="white_belly_1_" cx="178.6262" cy="214.7741" r="70.6183" gradientTransform="matrix(1.2313 0 0 1.1063 -34.2079 -31.5965)" gradientUnits="userSpaceOnUse">
+                    <stop offset="0" stop-color="#FDF7F1"/>
+                    <stop offset="0.5164" stop-color="#FCE2DF"/>
+                    <stop offset="1" stop-color="#FBCCCC"/>
+                  </radialGradient>
+                  <ellipse id="white_belly" class="st2" cx="185.7" cy="206" rx="98.9" ry="93.8"/>
+                  <path id="thick_coin_slot" class="st3" d="M234.1 106.1c0 0-19.2-5.9-38.6-7.8 -15.8-1.6-35.3-0.7-35.3-0.7"/>
+                </g>
+                <g id="coin">
+                  <g>
+                    <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="176.2587" y1="56.9905" x2="218.4891" y2="14.7601">
+                      <stop offset="0" stop-color="#FBEE38"/>
+                      <stop offset="6.599788e-02" stop-color="#FBEE3C"/>
+                      <stop offset="0.1341" stop-color="#FBEF49"/>
+                      <stop offset="0.2032" stop-color="#FCF15D"/>
+                      <stop offset="0.2729" stop-color="#FCF47A"/>
+                      <stop offset="0.3432" stop-color="#FDF79F"/>
+                      <stop offset="0.4129" stop-color="#FEFBCC"/>
+                      <stop offset="0.4799" stop-color="#FFFFFF"/>
+                      <stop offset="0.5227" stop-color="#FEFCD8"/>
+                      <stop offset="0.5769" stop-color="#FDF8AE"/>
+                      <stop offset="0.6341" stop-color="#FDF589"/>
+                      <stop offset="0.6938" stop-color="#FCF26C"/>
+                      <stop offset="0.7566" stop-color="#FCF055"/>
+                      <stop offset="0.8242" stop-color="#FBEF45"/>
+                      <stop offset="0.8998" stop-color="#FBEE3B"/>
+                      <stop offset="1" stop-color="#FBEE38"/>
+                    </linearGradient>
+                    <path class="st4" d="M197.4 65.8c-16.5 0-29.9-13.4-29.9-29.9S180.9 6 197.4 6c16.5 0 29.9 13.4 29.9 29.9S213.8 65.8 197.4 65.8z"/>
+                    <g>
+                      <path class="st5" d="M197.4 12c13.2 0 23.9 10.7 23.9 23.9s-10.7 23.9-23.9 23.9S173.5 49 173.5 35.9 184.2 12 197.4 12M197.4 0c-19.8 0-35.9 16.1-35.9 35.9 0 19.8 16.1 35.9 35.9 35.9 19.8 0 35.9-16.1 35.9-35.9C233.2 16.1 217.2 0 197.4 0L197.4 0z"/>
+                    </g>
+                  </g>
+                </g>
+                <g id="strokes">
+                  <path id="bottom_outline" class="st6" d="M146.8 92.1c-32.2 3-54.4 11.8-76.7 27.5l0 0c-15.3 9.5-50.8 20.8-50.8 20.8v99.7c0 0 2.3-1 13.6 4.3 6.2 2.9 13.3 9.1 19.9 15.1 3.4 3.5 7.2 6.9 11.2 10.1 1.1 0.9 2 1.6 2.9 2.3l0 0c26.7 20.1 64 32.6 105.3 32.6 81.1 0 146.8-48.1 146.8-107.5"/>
+                  <ellipse id="nose" class="st1" cx="19.4" cy="190.3" rx="18.4" ry="49.9"/>
+                  <ellipse id="right_nostril" class="st7" cx="24.8" cy="189.6" rx="4.2" ry="13.8"/>
+                  <ellipse id="left_nostril" class="st7" cx="8.7" cy="185.8" rx="4.2" ry="13.8"/>
+                  <circle id="eye" cx="85.6" cy="141" r="5.6"/>
+                  <path id="smile" class="st8" d="M33 244.4c0 0 8-0.1 10.7-4.3 2.7-4.2 0-12.7 0-12.7"/>
+                  <path id="frfoot" class="st9" d="M108 285.9l-8.5 44c0 0 17 6 29.5 0s31-44 31-44"/>
+                  <path id="brfoot" class="st9" d="M258 277.4l-4 41c0 0 15 6.5 22 2.5s25-44 29.5-62 9.8-37.9 9.8-37.9"/>
+                  <path id="blfoot" class="st10" d="M218.4 299l-6.4 16.9c0 0 21 5.5 27 0s15-30 15-30"/>
+                  <path id="r_ear" class="st9" d="M99.5 114.4c0 0-8.2-14.2-8.2-30.5 0-12.5 4.3-30.5 4.3-30.5s24-5 42.4 15c13 14.2 10 35 10 35"/>
+                  <radialGradient id="bellytransparent_1_" cx="178.6262" cy="207.4559" r="70.9051" gradientTransform="matrix(1.2313 0 0 1.1063 -34.2079 -35.0664)" gradientUnits="userSpaceOnUse">
+                    <stop offset="0.3356" style="stop-color:#FDF7F1;stop-opacity:0"/>
+                    <stop offset="0.5925" style="stop-color:#FCE1DD;stop-opacity:0.3867"/>
+                    <stop offset="0.8353" style="stop-color:#FBD2D1;stop-opacity:0.7521"/>
+                    <stop offset="1" stop-color="#FBCCCC"/>
+                  </radialGradient>
+                  <path id="bellytransparent" class="st11" d="M284.7 195.5c0 51.8-44.3 93.8-98.9 93.8s-98.9-42-98.9-93.8c0-42.8 27.4-79.5 67.6-94.5 4.8-1.8 26-1.8 37.8-0.6 16.9 1.7 34.7 4 48.7 11.1C271.9 127.4 284.7 159.8 284.7 195.5z"/>
+                  <path id="coin_slot" class="st12" d="M234 108.1c0 0-19.2-5.9-38.6-7.8 -15.8-1.6-35.7-0.8-35.7-0.8"/>
+                </g>
+              </svg>
+
+
+            </div>
+          </div>
         </div>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
