--- a/index.html
+++ b/index.html
@@ -8,30 +8,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
         <div class="top">
           <h1>Wage Per Second</h1>
-
           <h3>Enter your hourly wage and watch your money grow in real-time!</h3>
         </div>
 
         <div class="main">
-          <div class="wage-display-group">
-            <div id="middle">
-              <div class="wage-display">$<span id="dollar-display">15</span>.<span id="cents-display">00</span></div>
+          <div id="wage-box-container">
+            <div class="wage-box hourly">
+              <div class="maint">$<span id="dollar-display">15</span>.<span id="cents-display">00</span></div>
               <div class="subt">per hour</div>
             </div>
-          </div>
-          <div class="wage-display-group2">
-              <div id="cumulativeTotal">$<span id="cumulativeWage">00.00</span></div>
+            <div class="wage-box cumulative">
+              <div class="maint" id="cumulativeTotal">$<span id="cumulativeWage">00.00</span></div>
               <div class="subt">so far</div>
+            </div>
           </div>
 
           <div class="wage-input">
@@ -47,12 +41,11 @@
             <div id="amountPerSec">You earn $<span id="seconds-wage"></span> per second!</div>
           </div>
 
-          <div id="counter"><span id="elapsedTime"></span></div>
+          <!-- <div id="counter"><span id="elapsedTime">000</span></div> -->
           <div id="startStopBtn" class="startCounter">Start Counter</div>
 
           <div id="pigdiv">
             <div id="pigsvg">
-
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 352.2 334" xml:space="preserve" enable-background="new 0 0 352.2 334">
                 <style type="text/css">
 
@@ -129,15 +122,13 @@
                   <path id="coin_slot" class="st12" d="M234 108.1c0 0-19.2-5.9-38.6-7.8 -15.8-1.6-35.7-0.8-35.7-0.8"/>
                 </g>
               </svg>
-
-
             </div>
           </div>
         </div>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
+        <script src="js/vendor/jquery-1.12.0.min.js"></script>
+        <script src="js/vendor/snap.svg-min.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
